# kynostack

./: Makefile  README.md  discoverer.yml  stack.yml
discoverer/: Cargo.toml
discoverer/src/: invoke.txt  lib.rs
